k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goserver
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: "flaviomdutra/hello-go:v5.6"

          resources:
            requests:
              memory: 20Mi
              cpu: "0.05"
            limits:
              memory: 25Mi
              cpu: "0.05"

          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 4
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
            - mountPath: "/go/pvc"
              name: goserver-volume

      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
