k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  containers:
  - name: goserver
    image: "flaviomdutra/hello-go:latest"
